Bug 154401.  Cannot paste HTML on clipboard into composition or editor windows. r=bzbarsky, sr=kin